2004-10-20  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-buffer-setup): Modify
	`mode-line-buffer-identification'; display "Loading..." instead of
	`w3m-current-titile' when process of w3m active.

2004-10-16  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-touch-file): Use `set-file-times' if available;
	bind `coding-system-for-write' while calling `w3m-touch-command'.

2004-10-10  Andreas Seltenreich  <seltenreich@gmx.de>

	* shimbun/sb-laut-de.el: New file.

2004-10-08  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-perldoc.el (w3m-perldoc-input-coding-system)
	(w3m-perldoc-output-coding-system): New options.
	(w3m-about-perldoc): Use the above options, to display both
	modules encoded in EUC-JP and ones encoded in UTF-8 correctly.

2004-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-tab-line): Replace "%" with "%%" in
	w3m-tab-line-format.

2004-10-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve): Add autoload cookie.

2004-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-kantei.el (shimbun-get-headers): Don't escape
	Japanese parenthesis (it is not supported by old Emacsen).

2004-10-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-search.el (w3m-search-engine-alist): Add the parameter
	`ie=Shift_JIS' to Google for Japanese users.

2004-09-26  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* shimbun/sb-msdn.el (shimbun-msdn-from-address): Define.

	* shimbun/sb-exconn.el (shimbun-get-headers): Overwrite from
	address.

2004-09-25  Yuya Nishida  <yuya@j96.org>

	* shimbun/sb-impress.el (shimbun-get-headers): Include subtitles
	in the subject strings.

2004-09-21  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-antenna.el (w3m-about-antenna): Revert 2004-09-16 change.

2004-09-19  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* shimbun/sb-heise.el (shimbun-heise-content-start,
	shimbun-heise-wash-newsticker-article,
	shimbun-heise-wash-newsticker-article): Relax regexps.
